# yisc

./: CMakeLists.txt  Makefile  README.md  YISC.kdev4  code.py  main.cpp
components/clock_gen/: clock_generator.cpp
components/cpu/: alu.cpp  alu.h  execution_unit.cpp  execution_unit.h  instr_decoder.cpp  reg_file.cpp  registers.h
include/: alu.h  bus.h  clock_generator.h  cpu.h  execution_unit.h  instr_decoder.h  memory.h  mux.h  prog_counter.h  reg_file.h  registers.h
src/: tb.cpp
src/components/: bus.cpp  clock_generator.cpp  cpu.cpp  memory.cpp
src/components/cpu/: alu.cpp  cpu.cpp  execution_unit.cpp  instr_decoder.cpp  prog_counter.cpp  reg_file.cpp
src/components/mem/: memory.cpp
